Fixed problem with avatar alignment in new header

--- a/app/assets/stylesheets/new_common/header.css.scss
+++ b/app/assets/stylesheets/new_common/header.css.scss
@@ -68,6 +68,7 @@ $height: 81px;
   font-size: $sFontSize-larger;
   line-height: $sLineHeight-larger;
 }
+.Header-settingsItemAvatar { height: 42px }
 .Header-settingsLink {
   font-weight: $sFontWeight-lighter;
   color: rgba(white, 0.6);
